--- a/todos/src/Components/styles.css
+++ b/todos/src/Components/styles.css
@@ -69,6 +69,7 @@
     padding: 3px 5px;
     border: 1px solid rgb(223, 79, 79, 0)
 }
+span.active,
 .categories span:hover{
     border: 1px solid rgb(223, 79, 79, 0.2)
 }
