--- a/todos/src/Components/styles.css
+++ b/todos/src/Components/styles.css
@@ -76,3 +76,7 @@ span.active,
 .categories p{
     margin:  10px 100px 10px 20px;
 }
+.complited{
+    color: rgb(172, 169, 169);
+    text-decoration: line-through;
+}
