--- a/todos/src/Components/styles.css
+++ b/todos/src/Components/styles.css
@@ -64,24 +64,31 @@
 }
 .categories {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     font-size: 14px;
     color: rgb(126, 126, 126);
+    padding: 0 20px;
 }
 .categories span{
     display: inline-block;
     margin: 0 5px;
     padding: 3px 5px;
-    border: 1px solid rgb(223, 79, 79, 0)
+    border: 1px solid rgb(223, 79, 79, 0);
+    cursor: pointer;
 }
 span.active,
 .categories span:hover{
     border: 1px solid rgb(223, 79, 79, 0.2)
 }
-.categories p{
-    margin:  10px 100px 10px 20px;
-}
 .complited{
     color: rgb(172, 169, 169);
     text-decoration: line-through;
+}
+.deleteCompletedBtn{
+    cursor: pointer;
+
+}
+.deleteCompletedBtn:hover{
+    border-bottom: 1px solid rgb(126, 126, 126, 0.5);
 }
