make delete all completed task functionaluty

--- a/todos/src/Components/styles.css
+++ b/todos/src/Components/styles.css
@@ -92,3 +92,6 @@ span.active,
 .deleteCompletedBtn:hover{
     border-bottom: 1px solid rgb(126, 126, 126, 0.5);
 }
+.invisible{
+    visibility: hidden;
+}
