--- a/todos/src/Components/styles.css
+++ b/todos/src/Components/styles.css
@@ -58,9 +58,12 @@
     margin-left: 45px;
 }
 .icon{
-    color: rgb(182, 179, 179, 0.5);
+    color: rgb(182, 179, 179, 0.3);
     font-size: 18px;
-
+    cursor: pointer;
+}
+.iconActive{
+    color: rgb(182, 179, 179, 1);
 }
 .categories {
     display: flex;
@@ -69,6 +72,9 @@
     font-size: 14px;
     color: rgb(126, 126, 126);
     padding: 0 20px;
+}
+.categories p{
+    min-width: 70px;
 }
 .categories span{
     display: inline-block;
