--- a/todos/src/Components/styles.css
+++ b/todos/src/Components/styles.css
@@ -1,9 +1,9 @@
 .doneBtn{
-    width: 30px;
     height: 30px;
     border: 1px solid rgb(126, 126, 126, 0.5);
     border-radius: 50%;
     text-align: center;
+    flex: 0 0 30px
 }
 
 .doneBtn img{
@@ -26,17 +26,19 @@
 
 .task {
     display: flex;
-    /* justify-content: space-between; */
     align-items: center;
     font-size: 20px;
     padding: 10px;
     border-bottom: 1px solid rgb(141, 139, 139, 0.3);
 }
 .taskAndBtn{
-    width: 100%;
+    max-width: 92%;
+    flex: 1 0 auto;
     padding-left: 10px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    word-break:break-all;  
 }
 .inputTask{
     max-width: 100%; 
